
** bug fixes

Fixed type checking of stream element-type.

** new features

New algorithms:
 - Diffie-Hellman: Curve25519, Curve448, Elgamal
 - Digest: JH, Groestl
 - Message authentication code: Blake2, Blake2s
 - Signature: Ed448

New default pseudo-random number generator (os-prng) using the
operating system's PRNG.

Added optimized versions of some common functions for CCL on x86-64
and for ECL.

* Version 0.34, released 2017-03-07

** bug fixes

Padding issues in 64-bit SHA variants have been fixed.

Compiling with newer versions of SBCL will no longer throw errors due to
a missing SB-BIGNUM:BIGNUM-TYPE.

** new features

Many new algorithms have been added, all by Guillaume LE VAILLANT:
Threefish, Skein, ElGamal, ED25519, Poly1305, Serpent, SHA3, Blake2, and
variants thereof.

CTR mode should be faster on some implementations.  (Thanks to Guillaume
LE VAILLANT.)

* Version 0.33, released 2014-10-15

** bug fixes

Included prng.testvec in the packaged tarball.

The group parameter accessors for DSA keys have been fixed to not throw
errors.  (Thanks to Patrick Stein.)

** new features

The convenience function WITH-DIGESTING-STREAM has been added to the
IRONCLAD package.  (Thanks to Samium Gromoff.)

A new convenience package, IRONCLAD-TEXT, is included with this release;
when loaded, IRONCLAD-TEXT exports the function
WITH-DIGESTING-TEXT-STREAM from the IRONCLAD package.  IRONCLAD-TEXT
depends on FLEXI-STREAMS.  (Thanks to Samium Gromoff.)

The Salsa20 and ChaCha stream ciphers have been added, in full and
reduced-round variants.

The scrypt hash function's performance has been improved on x86-64 SBCL.

Type checking for the PBKDF key derivation functions has been improved.

* Version 0.32.1, released 2012-12-29

** bug fixes

Fixed octet-streams for Allegro versions >= 9.0.  (Thanks to Elliott
Johnson.)

Fixed WRITE-SEQUENCE on octet-output-streams.  (Thanks to Martin
Nzioki.)

Tweak system definition to work better with newer versions of ASDF.